--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "devDependencies": {
     "@types/d3-geo": "^3.0.2",
+    "@types/d3-selection": "^3.0.2",
     "@types/node": "18.0.0",
+    "@types/randomcolor": "^0.5.6",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/topojson-client": "^3.1.1",
