--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "d3-geo": "^3.0.1",
     "d3-selection": "^3.0.0",
+    "lodash.debounce": "^4.0.8",
     "next": "12.1.6",
     "randomcolor": "^0.6.2",
     "react": "18.2.0",
@@ -20,6 +22,7 @@
   "devDependencies": {
     "@types/d3-geo": "^3.0.2",
     "@types/d3-selection": "^3.0.2",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "18.0.0",
     "@types/randomcolor": "^0.5.6",
     "@types/react": "18.0.14",
